// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price Component can custom className 1`] = `
<DocumentFragment>
  .emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price custom-class emotion-0"
  >
    $1,099.99
  </span>
</DocumentFragment>
`;

exports[`Price Component can disable styling 1`] = `
<DocumentFragment>
  <span
    class="ss__price"
  >
    $1,099.99
  </span>
</DocumentFragment>
`;

exports[`Price Component has a line-through 1`] = `
<DocumentFragment>
  .emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price ss__price--strike emotion-0"
  >
    $1,099.99
  </span>
</DocumentFragment>
`;

exports[`Price Component has custom options 1`] = `
<DocumentFragment>
  .emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price emotion-0"
  >
    1.099.99 £
  </span>
</DocumentFragment>
`;

exports[`Price Component has default custom options 1`] = `
<DocumentFragment>
  .emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price emotion-0"
  >
    $1,099.99
  </span>
</DocumentFragment>
`;

exports[`Price Component is themeable and theme prop overrides ThemeProvider 1`] = `
<DocumentFragment>
  .emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price theme-class emotion-0"
  >
    $1,099.99
  </span>
</DocumentFragment>
`;

exports[`Price Component is themeable with ThemeProvider 1`] = `
<DocumentFragment>
  .emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price theme-class emotion-0"
  >
    $1,099.99
  </span>
</DocumentFragment>
`;

exports[`Price Component is themeable with theme prop 1`] = `
<DocumentFragment>
  .emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price theme-class emotion-0"
  >
    $1,099.99
  </span>
</DocumentFragment>
`;

exports[`Price Component renders 1`] = `
<DocumentFragment>
  .emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price emotion-0"
  >
    $1,099.99
  </span>
</DocumentFragment>
`;

exports[`Price Component renders with additional style using prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 20px;
}

.emotion-0.ss__price--strike {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: initial;
}

<span
    class="ss__price emotion-0"
  >
    $100.00
  </span>
</DocumentFragment>
`;
